--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank Dashboard</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="styles/style.css">
-    <!-- Include Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -19,13 +18,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="apply.html">Apply</a>
@@ -36,25 +35,10 @@
     </nav>
 
     <div class="container mt-5">
-        <!-- Savings Advice Section -->
-        <div class="card">
-            <div class="card-header bg-primary text-white">
-                Savings Advice
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Tips for Saving Money</h5>
-                <p class="card-text">
-                    Start by setting a monthly savings goal. Track your expenses and identify areas where you can cut back. 
-                    Consider automating your savings to ensure consistency.
-                </p>
-                <a href="#" class="btn btn-success">Learn More</a>
-            </div>
-        </div>
+        <h1>Contact Us</h1>
+        <p>If you have any questions or need assistance, feel free to reach out to us at support@bankdashboard.com.</p>
     </div>
 
-    <!-- Include Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
