--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -558,12 +558,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="map-container">
-                        <div class="map-placeholder">
-                            <div class="text-center">
-                                <i class="fas fa-map-marked-alt fa-3x mb-3"></i>
-                                <h5>Interactive Map</h5>
-                                <p class="mb-0">123 Financial District, Dublin, Ireland</p>
-                            </div>
+                        <div class="map-placeholder justify-content-center">
+                            <div style="width: 95%"><iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(Cashgineers)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.mapsdirections.info/calcular-la-población-en-un-mapa">mapa de poblacion google</a></iframe></div>
                         </div>
                     </div>
                 </div>
