--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -363,6 +363,9 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
