--- a/frontend/index.html
+++ b/frontend/index.html
@@ -291,6 +291,9 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
