--- a/frontend/about.html
+++ b/frontend/about.html
@@ -410,7 +410,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card text-center">
-                        <div class="team-avatar">JO</div>
+                        <div class="team-avatar">AK</div>
                         <h5 style="color: white; font-weight: 600;">Aryn</h5>
                         <p style="color: var(--success-gradient); font-weight: 500;">Lead Financial Advisor</p>
                         <p style="color: rgba(255,255,255,0.8);">Expert in savings strategies and financial planning.</p>
@@ -418,7 +418,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card text-center">
-                        <div class="team-avatar">AR</div>
+                        <div class="team-avatar">AB</div>
                         <h5 style="color: white; font-weight: 600;">Arthi</h5>
                         <p style="color: var(--success-gradient); font-weight: 500;">Senior Analyst</p>
                         <p style="color: rgba(255,255,255,0.8);">Specializes in data-driven investment insights.</p>
@@ -426,7 +426,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card text-center">
-                        <div class="team-avatar">MO</div>
+                        <div class="team-avatar">MB</div>
                         <h5 style="color: white; font-weight: 600;">Mollie</h5>
                         <p style="color: var(--success-gradient); font-weight: 500;">Customer Relations Manager</p>
                         <p style="color: rgba(255,255,255,0.8);">Focused on delivering exceptional client experiences.</p>
@@ -434,7 +434,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card text-center">
-                        <div class="team-avatar">AR</div>
+                        <div class="team-avatar">JM</div>
                         <h5 style="color: white; font-weight: 600;">John</h5>
                         <p style="color: var(--success-gradient); font-weight: 500;">Technology Specialist</p>
                         <p style="color: rgba(255,255,255,0.8);">Innovating financial tools for modern users.</p>
